--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1426,6 +1426,29 @@ h5.small-title {
 	filter: alpha(opacity=0);
 }
 
+.toTop1 {
+	text-decoration: none;
+	position: fixed;
+	bottom: 110px;
+	left: 3%;
+	overflow: hidden;
+	z-index: 999; 
+    width: 80px;
+    height: 77px;
+	border: none;
+	text-indent: 100%;
+	background: url("../images/butterfly.gif") no-repeat 0px 0px;
+}
+.toTopHover1 {
+    width: 80px;
+    height: 77px;
+	overflow: hidden;
+	float: left;
+	opacity: 0;
+	-moz-opacity: 0;
+	filter: alpha(opacity=0);
+}
+
 /*-- //bottom-to-top --*/
 
 
